<resources>
    <string name="app_name">joinMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">SIGNUP</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_registered_sign_up_here">Not Registered? Sign Up here</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
</resources>
